tests/baselines/reference/classPropertyAsPrivate.errors.txt
==== tests/cases/compiler/classPropertyAsPrivate.ts (8 errors) ====
    class C {
        private x: string;
        private get y() { return null; }
        private set y(x) { }
        private foo() { }
    
        private static a: string;
        private static get b() { return null; }
        private static set b(x) { }
        private static foo() { }
    }
    
    var c: C;
    // all errors
    c.x;
      ~
!!! error TS2107: 'C.x' is inaccessible.
    c.y;
      ~
!!! error TS2107: 'C.y' is inaccessible.
    c.y = 1;
      ~
!!! error TS2107: 'C.y' is inaccessible.
    c.foo();
      ~~~
!!! error TS2107: 'C.foo' is inaccessible.
    
    C.a;
      ~
!!! error TS2107: 'C.a' is inaccessible.
    C.b();
      ~
!!! error TS2107: 'C.b' is inaccessible.
    C.b = 1;
      ~
!!! error TS2107: 'C.b' is inaccessible.
    C.foo();
      ~~~
!!! error TS2107: 'C.foo' is inaccessible.